--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,9 +20,12 @@ jobs:
 
       - name: Install black
         run: pip install black
-
+      
       - name: Format code
         run: black . --check || (black . && git config --global user.name 'github-actions' && git config --global user.email 'github-actions@github.com' && git add . && git commit -m 'Format code with black' && git push)
+
+      - name: Lint with flake8
+        run: flake8 .
   build:
 
     runs-on: ubuntu-latest
@@ -38,3 +41,4 @@ jobs:
 
     - name: Push the Docker image
       run: docker push ghcr.io/geniuslat/automatic-image:latest
+
