--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -37,13 +37,13 @@ jobs:
     - uses: actions/checkout@v4
     
     - name: Log in to GitHub Container Registry
-      run: docker login --username geniuslat --password ${{ secrets.PAT }} ghcr.io
+      run: docker login --username eleyterokokus --password ${{ secrets.PAT }} ghcr.io
 
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag ghcr.io/geniuslat/automatic-image:latest
+      run: docker build . --file Dockerfile --tag ghcr.io/eleyterokokus/automatic-image:latest
 
     - name: Push the Docker image
-      run: docker push ghcr.io/geniuslat/automatic-image:latest
+      run: docker push ghcr.io/eleyterokokus/automatic-image:latest
   publish_package:
     runs-on: ubuntu-latest
     steps:
@@ -67,7 +67,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Используйте встроенный токен
         run: |
-          twine upload --repository-url https://github.com/eleyterokokus/MLopsHW1/packages/ -u "${{ github.actor }}" -p "${{ secrets.GITHUB_TOKEN }}" .
+          twine upload --repository-url https://github.com/eleyterokokus/MLopsHW1/packages/ -u "${{ github.actor }}" -p "${{ secrets.GITHUB_TOKEN }}" ./*
 
 
 
